add statistic